Fix Launch Game button — add missing --add-opens flag for JavaFX
java -jar on a fat JAR requires --add-opens=javafx.graphics/... for
JavaFX to initialise. Also checks process is alive before exiting the
sync app, and shows an error if the process exits immediately.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>